--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angularDemo:build"
+            "browserTarget": "angularDemo:build",
+			"port": 5000
           },
           "configurations": {
             "production": {
